--- a/Dockerfile.6-aws.2
+++ b/Dockerfile.6-aws.2
@@ -19,7 +19,7 @@ ENV SPRING_PROFILE="dev"
 #COPY entrypoint.sh /usr/local/bin
 RUN chmod +x /usr/local/bin/entrypoint.sh
 
-WORKDIR /lavagna-aws/project/target
+WORKDIR /lavagna/project/target
 
 ENTRYPOINT [ "entrypoint.sh" ]
 
