--- a/Dockerfile.6-aws.2
+++ b/Dockerfile.6-aws.2
@@ -11,9 +11,9 @@ FROM openjdk:8-jre-alpine
 #COPY --from=stage /project/target /target
 
 ENV DB_DIALECT="MYSQL"
-ENV DB_URL="jdbc:mysql://db:3306/lavagna?autoReconnect=true&useSSL=false"
+ENV DB_URL="lavagna.csbxzjhemvqj.us-west-2.rds.amazonaws.com"
 ENV DB_USER="user"
-ENV DB_PASS="user"
+ENV DB_PASS="useruser"
 ENV SPRING_PROFILE="dev"
 
 COPY entrypoint.sh /usr/local/bin
